# AutoSteamGifts

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .pyup.yml  README.md  autosg.service  pyproject.toml  requirements.txt
.github/workflows/: codeql-analysis.yml  pylint.yml
autosg/: __init__.py  __main__.py  config.py
autosg/sgbot/: __init__.py  sg.py  sg_interface.py  sgbot.py  steam_rating.py
autosg/tgbot/: __init__.py  file_storage.py  tgbot.py
autosg/tgbot/handlers/: __init__.py  callbacks.py  markups.py  messages.py  notifications.py
autosteamgifts/: __main__.py
autosteamgifts/sgbot/: sg.py
autosteamgifts/tgbot/: tgbot.py
tests/sgbot/: test_steam_rating.py
tgbot/: bot.py  sg.py
