[project]
name = "auto-steam-gifts"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "aiogram==3.22.0",
    "emoji==2.14.1",
    "playwright==1.40.0",
    "python-dotenv==1.1.1",
    "steamspypi==1.1.1",
    "tenacity==9.1.2",
]

[project.ruff]
line-length = 120

[dependency-groups]
dev = [
    "ruff>=0.12.9",
]
